# church-windows-reports

./: .gitignore  Makefile  README.md  REPORTS.txt  account.py  accountt.py  amount.py  amountt.py  arguments.py  balance.py  balancet.py  budgett.py  chart.py  chartt.py  checklist.txt  date.py  datet.py  detail.py  entriest.py  entry.py  entryt.py  finance.py  income.py  initialt.py  journal.py  journalt.py  layoutt.py  make-budget  make-chart  make-initial  ministry.py  ministryt.py  numbert.py  pyproject.toml  report  report_accounts.py  report_bills.py  report_fund.py  report_ministry.py  report_style.py  (+8 more)
original/: Makefile  amount.py  arguments.py  date.py  income.py  journal.py  ministry.py  number.py  report  statement.py
simple/: accountt.py  amountt.py  arguments.py  budget.json  budgett.py  chartt.py  datet.py  entryt.py  initial.json  initialt.py  journalt.py  ministryt.py  numbert.py  report  report_bills.py  report_funds.py  report_ministry.py  report_style.py  todo.txt  utility.py
simple/data/: balance17.csv  coa.csv  make-budget  make-chart  make-initial
src/cwr/: amountt.py  arguments.py  budgett.py  chartt.py  datet.py  detail.py  entriest.py  entryt.py  initialt.py  journalt.py  make_budget.py  make_chart.py  make_initial.py  ministryt.py  numbert.py  report.py  report_bills.py  report_ministry.py  report_subfunds.py  report_vendors.py  summary.py  summary_budget.py  treet.py  vanco.py
